--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sutugrunt",
+  "name": "sutunam-grunt-workflows",
   "version": "1.0.0",
   "description": "This is the scaffold for frontend developer in Sutunam to build their own development evironment with various type of projects.",
   "main": "index.js",
@@ -9,9 +9,9 @@
     "grunt": "^1.0.1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-postcss": "^0.8.0",
+    "grunt-sass": "^1.2.0",
     "grunt-wiredep": "^3.0.1"
   },
   "scripts": {
